<resources>
    <string name="app_name">Login</string>
    <string name="password">password</string>
    <string name="passwordLogin">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="tittle_login">tittle_login</string>
    <string name="login">login</string>
    <string name="nombre">nombre</string>
    <string name="apellidos">apellidos</string>
    <string name="email">email</string>
    <string name="RepitePassword">Repite Password</string>
    <string name="FechaNacimiento">Fecha de nacimiento</string>
    <string name="Registrarme">GO!</string>
</resources>