<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"

    android:gravity="center|top"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/underControl"
        android:layout_width="251dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:fontFamily="@font/bad_script"
        android:shadowColor="#67787E"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/tittle_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#FAF4F4"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:text="Welcome to Under Control" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="251dp"
        android:layout_height="53dp"
        android:layout_below="@id/underControl"
        android:layout_alignStart="@+id/underControl"
        android:layout_alignLeft="@+id/underControl"
        android:layout_alignEnd="@+id/underControl"
        android:layout_alignRight="@+id/underControl"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:autofillHints="Nombre"
        android:background="#8FD8EBF4"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/nombre"
        android:textColor="#67787E"
        android:textColorHighlight="#8FD8EBF4"
        android:textSize="24sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="251dp"
        android:layout_height="53dp"
        android:layout_below="@id/nombre"
        android:layout_alignStart="@+id/nombre"
        android:layout_alignLeft="@+id/nombre"
        android:layout_alignEnd="@+id/nombre"
        android:layout_alignRight="@+id/nombre"
        android:layout_marginTop="25dp"
        android:autofillHints="apellidos"
        android:background="#8FD8EBF4"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/apellidos"
        android:textColor="#67787E"
        android:textColorHighlight="#DAC4C4"
        android:textSize="24sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/email"
        android:layout_width="251dp"
        android:layout_height="53dp"
        android:layout_below="@id/apellidos"
        android:layout_alignStart="@+id/apellidos"
        android:layout_alignLeft="@+id/apellidos"
        android:layout_alignEnd="@+id/apellidos"
        android:layout_alignRight="@+id/apellidos"
        android:layout_marginTop="25dp"
        android:autofillHints="email"
        android:background="#8FD8EBF4"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textColor="#67787E"
        android:textColorHighlight="#DAC4C4"
        android:textSize="24sp"
        android:text="@string/email"
        android:labelFor="@id/email"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/password"
        android:layout_width="251dp"
        android:layout_height="53dp"
        android:layout_below="@id/email"
        android:layout_alignStart="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignEnd="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_marginTop="25dp"
        android:autofillHints="password"
        android:background="#8FD8EBF4"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:inputType="textVisiblePassword"
        android:textColor="#67787E"
        android:textColorHighlight="#DAC4C4"
        android:textSize="24sp"
        android:text="@string/password"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/passwordConfirmacion"
        android:layout_width="251dp"
        android:layout_height="53dp"
        android:layout_below="@id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_marginTop="25dp"
        android:autofillHints="passwordConfirmacion"
        android:background="#8FD8EBF4"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:inputType="textVisiblePassword"
        android:textColor="#67787E"
        android:textColorHighlight="#DAC4C4"
        android:textSize="24sp"
        android:text="@string/RepitePassword"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/fechaNacimiento"
        android:layout_width="251dp"
        android:layout_height="53dp"
        android:layout_below="@id/passwordConfirmacion"
        android:layout_alignStart="@+id/passwordConfirmacion"
        android:layout_alignLeft="@+id/passwordConfirmacion"
        android:layout_alignEnd="@+id/passwordConfirmacion"
        android:layout_alignRight="@+id/passwordConfirmacion"
        android:layout_marginTop="25dp"
        android:autofillHints="passwordRepetida"
        android:background="#8FD8EBF4"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:inputType="date"
        android:textColor="#67787E"
        android:textColorHighlight="#DAC4C4"
        android:textSize="24sp"
        android:text="@string/FechaNacimiento"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/Registrarme"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fechaNacimiento"
        android:layout_alignStart="@+id/fechaNacimiento"
        android:layout_alignLeft="@+id/fechaNacimiento"
        android:layout_alignEnd="@+id/fechaNacimiento"
        android:layout_alignRight="@+id/fechaNacimiento"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="20dp"
        android:background="@color/teal_700"
        android:text="@string/Registrarme"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:backgroundTint="#67787E" />

</RelativeLayout>