<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"

    android:gravity="center|top"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/underControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        android:fontFamily="@font/bad_script"
        android:shadowColor="#67787E"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/tittle_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#FAF4F4"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:text="Under Control" />

    <EditText
        android:id="@+id/nombreUsuario"
        android:layout_width="251dp"
        android:layout_height="53dp"
        android:layout_below="@id/underControl"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:autofillHints="NombreUsuario"
        android:background="#8FD8EBF4"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/usuario"
        android:textColor="#67787E"
        android:textColorHighlight="#DAC4C4"
        android:textSize="24sp"
        tools:text="Usuario" />

    <EditText
        android:id="@+id/password"
        android:layout_width="256dp"
        android:layout_height="54dp"
        android:layout_below="@id/nombreUsuario"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:background="#8FD8EBF4"
        android:editable="true"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="#67787E"
        android:textColorHighlight="#DAC4C4"
        android:textSize="24sp"
        tools:text="password" />

    <Button
        android:id="@+id/login"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="20dp"
        android:background="@color/teal_700"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:backgroundTint="#67787E" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_alignStart="@+id/login"
        android:layout_alignLeft="@+id/login"
        android:layout_alignEnd="@+id/login"
        android:layout_alignRight="@+id/login"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:gravity="center"
        android:text="Registrarme"
        android:textColor="#67787E"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>